Added scripts for sim and tabulation of smmala for logistic

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 *.jl.mem
 examples/logistic/mala/data
 examples/logistic/mala/output
+examples/logistic/smmala/data
+examples/logistic/smmala/output
