--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@
 *.jl.mem
 examples/logistic/mala/data
 examples/logistic/mala/output
+examples/logistic/pgusmmala/data
+examples/logistic/pgusmmala/output
 examples/logistic/smmala/data
 examples/logistic/smmala/output
