Started working on example 2 (poisson reg)

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 *.jl.mem
 examples/logistic/data
 examples/logistic/analysis/output
+examples/poisson/data/mala
+examples/poisson/data/pgusmmala
+examples/poisson/data/smmala
+examples/poisson/analysis/output
